# ltou

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-tag.yml
ltou/: __main__.py  cli.py  model.py
ltou/template/: .gitignore  cookiecutter.json
ltou/template/hooks/: post_gen_project.py  pre_gen_project.py
ltou/template/{{cookiecutter.project_name}}/: .dockerignore  .env_sample  .gitignore  README.md  alembic.ini  conditional_files.json  pyproject.toml  replaceable_files.json  requirements.txt
ltou/template/{{cookiecutter.project_name}}/app/: .gitignore  .gitlab-ci.yml  logging.py  main.py
ltou/template/{{cookiecutter.project_name}}/app/core/: config.py  security.py
ltou/template/{{cookiecutter.project_name}}/app/middlewares/: correlation.py  process_time.py
ltou/template/{{cookiecutter.project_name}}/app/models/: __init__.py
ltou/template/{{cookiecutter.project_name}}/app/move_db_beanie/: init_beanie.py
ltou/template/{{cookiecutter.project_name}}/app/move_db_mongo/: mongodb.py  mongodb_utils.py
ltou/template/{{cookiecutter.project_name}}/app/move_db_sa/: base.py  init_db.py  session.py
ltou/template/{{cookiecutter.project_name}}/app/move_db_sqlmodel/: __init__.py  session.py
ltou/template/{{cookiecutter.project_name}}/app/move_db_tortoise/: __init__.py  tortoise_util.py
ltou/template/{{cookiecutter.project_name}}/app/move_worker/: celery_app.py  celery_worker.py
ltou/template/{{cookiecutter.project_name}}/app/schemas/: base.py
ltou/template/{{cookiecutter.project_name}}/app/tests/: conftest.py  test_health.py
ltou/template/{{cookiecutter.project_name}}/app/utils/: cache.py  kafka_producer.py  minio_client.py  oid.py  redis_utils.py  sentry_integration.py  timing_decorator.py  types.py
ltou/template/{{cookiecutter.project_name}}/deploy/: Dockerfile  docker-compose.yml
ltou/template/{{cookiecutter.project_name}}/move_alembic/: env.py  script.py.mako
