[tool.poetry]
name = "ltou"
version = "0.1.0"
description = "Like 'cargo new' cli creat fastapi project"
authors = ["hiro <yidiyu0507s@163.com>"]
readme = "README.md"
keywords = ["FastAPI", "Cookiecutter", "cli", "template"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.4"
termcolor = "^2.2.0"
loguru = "^0.6.0"
uvicorn = "^0.20.0"
cookiecutter = "^1.7.3"
simple-term-menu = "^1.5.2"
click = "^8.1.3"
prompt-toolkit = "^3.0.36"
pre-commit = "^3.0.4"
sqlalchemy = "^2.0.2"
greenlet = "2.0.2"
asyncpg = "^0.27.0"
tortoise = "^0.1.1"
pytz = "^2022.7.1"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
ltou = "ltou.__main__:main"