[tool.poetry]
name = "ltou"
version = "0.1.1"
description = "Like 'cargo new' cli creat fastapi project"
authors = ["hiro <yidiyu0507s@163.com>"]
readme = "README.md"
repository = "https://github.com/linpan/ltou.git"
homepage = "https://github.com/linpan/ltou.git"
keywords = ["FastAPI", "Cookiecutter", "cli", "template"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.5"
termcolor = "^2.2.0"
cookiecutter = "^1.7.3"
simple-term-menu = "^1.5.2"
click = "^8.1.3"
prompt-toolkit = "^3.0.36"
pre-commit = "^3.0.4"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-env = "^0.6.2"
pytest-xdist = {version = "^2.5.0", extras = ["psutil"]}
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
ltou = "ltou.__main__:main"